# kconfig-frontends-win

./: .gitignore  CMakeLists.txt  README
cmake/: FindGPERF.cmake
frontends/: CMakeLists.txt
frontends/conf/: CMakeLists.txt
frontends/gconf/: CMakeLists.txt
frontends/mconf/: CMakeLists.txt
libs/: CMakeLists.txt
libs/images/: CMakeLists.txt
libs/lxdialog/: CMakeLists.txt  textbox.c
libs/parser/: CMakeLists.txt  confdata.c  hconf.gperf  symbol.c
utils/: kconfig-tweak.bat
